@@ -1,5 +1,6 @@
 0.05
  - Add Curses::UI::Char.
+ - Update Module::Install to 1.21 version.
 
 0.04 2020-04-05T15:17:10+02:00
  - Add Curses::UI::AnyEvent.
